@@ -1,1 +1,2 @@
+prereq: ../../../tests/is_ppc64_BE
 prog: ldst_multiple
